--- a/Section4/Makefile
+++ b/Section4/Makefile
@@ -1,8 +1,8 @@
 .PHONY: clean All
 
 All:
-	@echo "----------Building project:[ FirstProgram - Debug ]----------"
-	@cd "FirstProgram" && "$(MAKE)" -f  "FirstProgram.mk"
+	@echo "----------Building project:[ Constants - Debug ]----------"
+	@cd "Constants" && "$(MAKE)" -f  "Constants.mk"
 clean:
-	@echo "----------Cleaning project:[ FirstProgram - Debug ]----------"
-	@cd "FirstProgram" && "$(MAKE)" -f  "FirstProgram.mk" clean
+	@echo "----------Cleaning project:[ Constants - Debug ]----------"
+	@cd "Constants" && "$(MAKE)" -f  "Constants.mk" clean
