--- a/Section4/Makefile
+++ b/Section4/Makefile
@@ -1,8 +1,8 @@
 .PHONY: clean All
 
 All:
-	@echo "----------Building project:[ Vectors - Debug ]----------"
-	@cd "Vectors" && "$(MAKE)" -f  "Vectors.mk"
+	@echo "----------Building project:[ VectorChallenge - Debug ]----------"
+	@cd "VectorChallenge" && "$(MAKE)" -f  "VectorChallenge.mk"
 clean:
-	@echo "----------Cleaning project:[ Vectors - Debug ]----------"
-	@cd "Vectors" && "$(MAKE)" -f  "Vectors.mk" clean
+	@echo "----------Cleaning project:[ VectorChallenge - Debug ]----------"
+	@cd "VectorChallenge" && "$(MAKE)" -f  "VectorChallenge.mk" clean
