Mixed Expressions and Conversions

--- a/Section4/Makefile
+++ b/Section4/Makefile
@@ -1,8 +1,8 @@
 .PHONY: clean All
 
 All:
-	@echo "----------Building project:[ VectorChallenge - Debug ]----------"
-	@cd "VectorChallenge" && "$(MAKE)" -f  "VectorChallenge.mk"
+	@echo "----------Building project:[ MixedExpressionsAndConversions - Debug ]----------"
+	@cd "MixedExpressionsAndConversions" && "$(MAKE)" -f  "MixedExpressionsAndConversions.mk"
 clean:
-	@echo "----------Cleaning project:[ VectorChallenge - Debug ]----------"
-	@cd "VectorChallenge" && "$(MAKE)" -f  "VectorChallenge.mk" clean
+	@echo "----------Cleaning project:[ MixedExpressionsAndConversions - Debug ]----------"
+	@cd "MixedExpressionsAndConversions" && "$(MAKE)" -f  "MixedExpressionsAndConversions.mk" clean
