--- a/Section4/Makefile
+++ b/Section4/Makefile
@@ -1,8 +1,8 @@
 .PHONY: clean All
 
 All:
-	@echo "----------Building project:[ TestingForEquality - Debug ]----------"
-	@cd "TestingForEquality" && "$(MAKE)" -f  "TestingForEquality.mk"
+	@echo "----------Building project:[ RelationalOperators - Debug ]----------"
+	@cd "RelationalOperators" && "$(MAKE)" -f  "RelationalOperators.mk"
 clean:
-	@echo "----------Cleaning project:[ TestingForEquality - Debug ]----------"
-	@cd "TestingForEquality" && "$(MAKE)" -f  "TestingForEquality.mk" clean
+	@echo "----------Cleaning project:[ RelationalOperators - Debug ]----------"
+	@cd "RelationalOperators" && "$(MAKE)" -f  "RelationalOperators.mk" clean
