--- a/Section4/Makefile
+++ b/Section4/Makefile
@@ -1,8 +1,8 @@
 .PHONY: clean All
 
 All:
-	@echo "----------Building project:[ LogicalOperators - Debug ]----------"
-	@cd "LogicalOperators" && "$(MAKE)" -f  "LogicalOperators.mk"
+	@echo "----------Building project:[ Pennies - Debug ]----------"
+	@cd "Pennies" && "$(MAKE)" -f  "Pennies.mk"
 clean:
-	@echo "----------Cleaning project:[ LogicalOperators - Debug ]----------"
-	@cd "LogicalOperators" && "$(MAKE)" -f  "LogicalOperators.mk" clean
+	@echo "----------Cleaning project:[ Pennies - Debug ]----------"
+	@cd "Pennies" && "$(MAKE)" -f  "Pennies.mk" clean
