--- a/Section4/Makefile
+++ b/Section4/Makefile
@@ -1,8 +1,8 @@
 .PHONY: clean All
 
 All:
-	@echo "----------Building project:[ IfStatement - Debug ]----------"
-	@cd "IfStatement" && "$(MAKE)" -f  "IfStatement.mk"
+	@echo "----------Building project:[ Graders - Debug ]----------"
+	@cd "Graders" && "$(MAKE)" -f  "Graders.mk"
 clean:
-	@echo "----------Cleaning project:[ IfStatement - Debug ]----------"
-	@cd "IfStatement" && "$(MAKE)" -f  "IfStatement.mk" clean
+	@echo "----------Cleaning project:[ Graders - Debug ]----------"
+	@cd "Graders" && "$(MAKE)" -f  "Graders.mk" clean
