Package cost calculator

--- a/Section4/Makefile
+++ b/Section4/Makefile
@@ -1,8 +1,8 @@
 .PHONY: clean All
 
 All:
-	@echo "----------Building project:[ Graders - Debug ]----------"
-	@cd "Graders" && "$(MAKE)" -f  "Graders.mk"
+	@echo "----------Building project:[ Shipping - Debug ]----------"
+	@cd "Shipping" && "$(MAKE)" -f  "Shipping.mk"
 clean:
-	@echo "----------Cleaning project:[ Graders - Debug ]----------"
-	@cd "Graders" && "$(MAKE)" -f  "Graders.mk" clean
+	@echo "----------Cleaning project:[ Shipping - Debug ]----------"
+	@cd "Shipping" && "$(MAKE)" -f  "Shipping.mk" clean
