--- a/Section4/Makefile
+++ b/Section4/Makefile
@@ -1,8 +1,8 @@
 .PHONY: clean All
 
 All:
-	@echo "----------Building project:[ Switch - Debug ]----------"
-	@cd "Switch" && "$(MAKE)" -f  "Switch.mk"
+	@echo "----------Building project:[ SwitchEnum - Debug ]----------"
+	@cd "SwitchEnum" && "$(MAKE)" -f  "SwitchEnum.mk"
 clean:
-	@echo "----------Cleaning project:[ Switch - Debug ]----------"
-	@cd "Switch" && "$(MAKE)" -f  "Switch.mk" clean
+	@echo "----------Cleaning project:[ SwitchEnum - Debug ]----------"
+	@cd "SwitchEnum" && "$(MAKE)" -f  "SwitchEnum.mk" clean
