--- a/Section4/Makefile
+++ b/Section4/Makefile
@@ -1,8 +1,8 @@
 .PHONY: clean All
 
 All:
-	@echo "----------Building project:[ ConditionalOperator - Debug ]----------"
-	@cd "ConditionalOperator" && "$(MAKE)" -f  "ConditionalOperator.mk"
+	@echo "----------Building project:[ ForLoop - Debug ]----------"
+	@cd "ForLoop" && "$(MAKE)" -f  "ForLoop.mk"
 clean:
-	@echo "----------Cleaning project:[ ConditionalOperator - Debug ]----------"
-	@cd "ConditionalOperator" && "$(MAKE)" -f  "ConditionalOperator.mk" clean
+	@echo "----------Cleaning project:[ ForLoop - Debug ]----------"
+	@cd "ForLoop" && "$(MAKE)" -f  "ForLoop.mk" clean
